--- a/HYYBLO_prog3/MainWindow.xaml
+++ b/HYYBLO_prog3/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:HYYBLO_prog3"
         mc:Ignorable="d"
         Title="WpfTTD" Height="600" Width="800" Loaded="Window_Loaded"
-        Background="White"
-        Icon="icon.ico">
+        Background="WhiteSmoke"
+        Icon="icon.ico" MouseWheel="Window_MouseWheel">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
