--- a/HYYBLO_prog3/MainWindow.xaml
+++ b/HYYBLO_prog3/MainWindow.xaml
@@ -10,14 +10,14 @@
         Icon="icon.ico" MouseWheel="Window_MouseWheel">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="44"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
         
         <UserControl Name="PlayArea" Grid.Row="1"/> <!-- A játékteret rajzoljuk ki mindig legalulra -->
 
-        <Menu Grid.Row="0">
+        <Menu Grid.Row="0" Background="Transparent">
             <Button Name="btnRoad" Height="40" Width="40" Click="btnRoad_Click">
                 <Image Source="D:/Dokumentumok/Visual Studio 2015/Projects/oenik_prog3_2017osz_hyyblo/HYYBLO_prog3/Images/road.png" />
             </Button>
