Basic path finding and store items in a list instead of a 2D array

--- a/HYYBLO_prog3/MainWindow.xaml
+++ b/HYYBLO_prog3/MainWindow.xaml
@@ -27,6 +27,9 @@
             <Button Name="btnDelete" Height="40" Width="40" Click="btnDelete_Click">
                 <Image Source="D:/Dokumentumok/Visual Studio 2015/Projects/oenik_prog3_2017osz_hyyblo/HYYBLO_prog3/Images/delete.png" />
             </Button>
+            <Button Name="btnVehicle" Height="40" Width="40" Click="btnVehicle_Click">
+                <Image Source="D:/Dokumentumok/Visual Studio 2015/Projects/oenik_prog3_2017osz_hyyblo/HYYBLO_prog3/Images/delete.png" />
+            </Button>
         </Menu>
 
         <StatusBar Grid.Row="2">
