--- a/HYYBLO_prog3/MainWindow.xaml
+++ b/HYYBLO_prog3/MainWindow.xaml
@@ -24,23 +24,20 @@
 
         <UserControl Name="PlayArea" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"  Grid.RowSpan="3"/> <!-- A játékteret rajzoljuk ki mindig legalulra -->
 
-        <Menu Background="Transparent" Name="TopBar" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" MouseEnter="ViewMouseEnter" MouseLeave="ViewMouseLeave"/>
-        <Menu Background="Transparent" Name="BottomBar" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" MouseEnter="ViewMouseEnter"  MouseLeave="ViewMouseLeave"/>
-        <Menu Background="Transparent" Name="LeftBar" Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" MouseEnter="ViewMouseEnter"  MouseLeave="ViewMouseLeave"/>
-        <Menu Background="Transparent" Name="RightBar" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" MouseEnter="ViewMouseEnter"  MouseLeave="ViewMouseLeave"/>
+        <Menu Background="Transparent" Name="TopBar" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" MouseEnter="ViewMouseEnter" MouseLeave="ViewMouseLeave"  Focusable="False"/>
+        <Menu Background="Transparent" Name="BottomBar" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" MouseEnter="ViewMouseEnter"  MouseLeave="ViewMouseLeave"  Focusable="False"/>
+        <Menu Background="Transparent" Name="LeftBar" Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" MouseEnter="ViewMouseEnter"  MouseLeave="ViewMouseLeave"  Focusable="False"/>
+        <Menu Background="Transparent" Name="RightBar" Grid.Row="1" Grid.Column="2" Grid.RowSpan="3" MouseEnter="ViewMouseEnter"  MouseLeave="ViewMouseLeave"  Focusable="False"/>
 
         <Menu Grid.Row="0" Background="Transparent" Grid.Column="0" Grid.ColumnSpan="3">
             <ToggleButton Name="btnRoad" Height="40" Width="40" Click="BtnRoad_Click" Focusable="False">
                 <Image Source="/Images/road.png" />
             </ToggleButton>
             <ToggleButton Name="btnWarehouse" Height="40" Width="40" Click="BtnWarehouse_Click" Focusable="False">
-                <Image Source="/Images/Buildings/warehouse.png" />
+                <Image Source="/Images/warehouse.png" />
             </ToggleButton>
             <ToggleButton Name="btnDelete" Height="40" Width="40" Click="BtnDelete_Click" Focusable="False">
                 <Image Source="/Images/delete.png" />
-            </ToggleButton>
-            <ToggleButton Name="btnVehicle" Height="40" Width="40" Click="BtnVehicle_Click" Focusable="False">
-                <Image Source="/Images/truck.png" />
             </ToggleButton>
         </Menu>
 
