--- a/HYYBLO_prog3/App.xaml
+++ b/HYYBLO_prog3/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="HYYBLO_prog3.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HYYBLO_prog3"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View\MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
