--- a/HYYBLO_prog3/View/GameWindow.xaml
+++ b/HYYBLO_prog3/View/GameWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="Hyyblo_View.MainWindow"
+﻿<Window x:Class="Hyyblo_View.GameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HYYBLO_prog3"
         mc:Ignorable="d"
         Title="WpfTTD" Height="600" Width="800"
         Background="WhiteSmoke"
-        Icon="icon.ico" MouseWheel="Window_MouseWheel">
+        MouseWheel="Window_MouseWheel"
+        Icon="../icon.ico" >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="44"/>
@@ -22,7 +22,8 @@
             <ColumnDefinition Width="30" />
         </Grid.ColumnDefinitions>
 
-        <UserControl Name="PlayArea" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"  Grid.RowSpan="3"/> <!-- A játékteret rajzoljuk ki mindig legalulra -->
+        <UserControl Name="PlayArea" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"  Grid.RowSpan="3"/>
+        <!-- A játékteret rajzoljuk ki mindig legalulra -->
 
         <Menu Background="Transparent" Name="TopBar" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" MouseEnter="ViewMouseEnter" MouseLeave="ViewMouseLeave"  Focusable="False"/>
         <Menu Background="Transparent" Name="BottomBar" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" MouseEnter="ViewMouseEnter"  MouseLeave="ViewMouseLeave"  Focusable="False"/>
