--- a/HYYBLO_prog3/View/EditWarehouse.xaml
+++ b/HYYBLO_prog3/View/EditWarehouse.xaml
@@ -7,9 +7,6 @@
         mc:Ignorable="d"
         Title="{Binding Name}" Height="300" Width="320"
         ResizeMode="NoResize">
-    <Window.Resources>
-        <local:WaretypeToColor x:Key="WTC" />
-    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10" />
@@ -42,17 +39,21 @@
         <ListView x:Name="listBox" Grid.Column="1" Grid.Row="3" Grid.RowSpan="13" ItemsSource="{Binding Warehouses}" SelectedItem="{Binding Target}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Background="{Binding CargoType, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource WTC}}">
+                    <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="30" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="20" />
                             <ColumnDefinition />
-                            <ColumnDefinition Width="30"  />
+                            <ColumnDefinition Width="20"  />
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="5" />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="X: " Grid.Column="0"/>
-                        <TextBlock Text="{Binding X}" FontWeight="Bold" Grid.Column="1" />
-                        <TextBlock Text=", Y: " Grid.Column="2" />
-                        <TextBlock Text="{Binding Y}" FontWeight="Bold" Grid.Column="3"/>
+                        <TextBlock Text="X: " Grid.Column="1" Height="25" Width="25" />
+                        <TextBlock Text="{Binding X}" FontWeight="Bold" Grid.Column="2" />
+                        <TextBlock Text=" Y: " Grid.Column="3" />
+                        <TextBlock Text="{Binding Y}" FontWeight="Bold" Grid.Column="4"/>
+                        <TextBlock Text="{Binding CargoType}" FontWeight="Bold" Grid.Column="6"/> <!-- Itt jól megjeleníti-->
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
